# news-clustering

./: .env  .gitignore  README.md  app.py  articles copy 2.db  articles.db  celerybeat-schedule  clustering.py  config.py  fl_site.py  kubparser.py  logger.py  logging.conf  pre_start.py  pyproject.toml  repository.py  start_db.py  start_parsers.py  tests_to_run.txt  util.py
clustering/: abc_algorithm.py  clustering_db.py  dbscan.py
controllers/: app_controller.py  cleaner_controller.py  clustering_controller.py  parser_controller.py
db_context/: abc_context.py  sqlite_context.py
dto/: article.py  article_selectors.py
flaskr/: __init__.py  news_parser.py  schema.sql  tasks.py
flaskr/commands/: init_db_command.py  run_algorithm_command.py  run_parsers_command.py
flaskr/resources/: db.py  parsers.py
flaskr/scripts/: run_algorithm.py  run_parsers.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/cluster/: show_news_by_cluster.html
flaskr/templates/news/: index.html
flaskr/views/: cluster.py  news.py
instance/: config.py  flaskr.sqlite
parsers/: base_parser.py  k24_parser.py  kn_parser.py  kt_parser.py  lk_parser.py
parsing/: kubparser.py  logger.py  parsers.py  repository.py
resources/: articles.db  articles_backup.db  create_articles.sql
static/: styles.css
templates/: index.html
test/: conftest.py  test_cleaner.py  test_clustering.py  test_parsers.py
test/parsers/: conftest.py  test_k24.py  test_kn.py  test_kt.py  test_lk.py
vectorization/: abc_vectorizer.py  stemmed_vectorizer.py
